DevOps/force-app/main/default/objects/Outbound_Referral__c/Outbound_Referral__c.object-meta.xml
<CustomObject>
    <label>Outbound Referral</label>
    <nameField>
        <displayFormat>OR-{00000000}</displayFormat>
        <label>Outbound Referral Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Referrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>