DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/BPS_Linkage__c.field-meta.xml
<CustomField>
    <fullName>BPS_Linkage__c</fullName>
    <label>Linkage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BPS_Linkage_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child protection</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Family members</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Higher education</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Justice</fullName>
            </value>
            <value>
                <fullName>Mental health</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Early childhood education</fullName>
            </value>
            <value>
                <fullName>Extended family</fullName>
            </value>
            <value>
                <fullName>Local community people</fullName>
            </value>
            <value>
                <fullName>Educational or work colleagues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Recreational (sports/interests/hobbies)</fullName>
            </value>
            <value>
                <fullName>Spiritual/Religious</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Local community group</fullName>
            </value>
            <value>
                <fullName>Online digital community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>