DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/BPS_Linkage_Name__c.field-meta.xml
<CustomField>
    <fullName>BPS_Linkage_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, TEXT(Linkage_Number__c)&amp;&quot; - &quot;&amp; Case__r.CaseNumber )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkage Name</label>
    <type>Text</type>
</CustomField>