DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/BPS_Linkage_Type__c.field-meta.xml
<CustomField>
    <fullName>BPS_Linkage_Type__c</fullName>
    <label>Linkage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informal</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Mainstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>