DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/BPS_Participant__c.field-meta.xml
<CustomField>
    <fullName>BPS_Participant__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;   Case__r.BPS_Participant__r.Id ,     Case__r.BPS_Participant__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant</label>
    <type>Text</type>
</CustomField>