DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/BPS_Participant_LGA__c.field-meta.xml
<CustomField>
    <fullName>BPS_Participant_LGA__c</fullName>
    <formula>TEXT(Case__r.BPS_Participant__r.BPS_LGA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant LGA</label>
    <type>Text</type>
</CustomField>