DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/BPS_Participant_Region__c.field-meta.xml
<CustomField>
    <fullName>BPS_Participant_Region__c</fullName>
    <formula>Case__r.BPS_Participant__r.BPS_Participant_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Region</label>
    <type>Text</type>
</CustomField>