DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Outbound Referrals</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>