DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Case_Member__c.field-meta.xml
<CustomField>
    <fullName>Case_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Participant the Outbound Referral is referring to.</description>
    <inlineHelpText>Participant the Outbound Referral is referring to.</inlineHelpText>
    <label>Case Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outbound Referrals (Case Member)</relationshipLabel>
    <relationshipName>Outbound_Referrals_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>