DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Case__r.Contact.Contact_Hyperlink__c</formula>
    <label>Participant</label>
    <type>Text</type>
</CustomField>