DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>CASESAFEID(Case__r.Contact.Id)</formula>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>