DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Case__r.Contact.Fullname__c</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>