DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Currently_Engaging_Service__c.field-meta.xml
<CustomField>
    <fullName>Currently_Engaging_Service__c</fullName>
    <description>CF - Whether a participant is currently engaging the service</description>
    <inlineHelpText>CF - Whether a participant is currently engaging the service</inlineHelpText>
    <label>Currently Engaging Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>