DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Date_first_follow_up_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_first_follow_up_completed__c</fullName>
    <description>Date first follow up completed</description>
    <inlineHelpText>FCS - Date first follow up completed</inlineHelpText>
    <label>Date first follow up completed</label>
    <type>Date</type>
</CustomField>