DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Date_outbound_service_provider_accessed__c.field-meta.xml
<CustomField>
    <fullName>Date_outbound_service_provider_accessed__c</fullName>
    <description>Date outbound service provider accessed</description>
    <inlineHelpText>FCS - Date outbound service provider accessed</inlineHelpText>
    <label>Date outbound service provider accessed</label>
    <type>Date</type>
</CustomField>