DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/General_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Comments__c</fullName>
    <description>Workers can record general comments for the outbound referral that may be more specific to the Case or relevant to the referral</description>
    <inlineHelpText>Workers can record general comments for the outbound referral that may be more specific to the Case or relevant to the referral</inlineHelpText>
    <label>General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>