DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Key_Contact_At_Referred_To_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_At_Referred_To_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Contact At Referred To Organisation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only contacts working for the Referred To organisation can be selected</errorMessage>
        <filterItems>
            <field>$Source.Referred_To_Organisation__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outbound Referrals</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>