DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Legacy_Refferal_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Refferal_Id__c</fullName>
    <description>Legacy ID field from dataload</description>
    <label>Legacy Refferal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>