DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Linkage_Number__c.field-meta.xml
<CustomField>
    <fullName>Linkage_Number__c</fullName>
    <label>Linkage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>