DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Other_Reasons_For_Seeking_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Other_Reasons_For_Seeking_Assistance__c</fullName>
    <label>Other Reasons For Seeking Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_Seeking_Assistance</valueSetName>
    </valueSet>
</CustomField>