DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Outbound_Referral__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Referral__c</fullName>
    <description>FCS - Is this the Primary, Secondary, Tertiary or Other Referral?
(Must only have one of each)</description>
    <inlineHelpText>FCS - Is this the Primary, Secondary, Tertiary or Other Referral?
(Must only have one of each)</inlineHelpText>
    <label>Referral Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>