DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Presenting_Issues__c.field-meta.xml
<CustomField>
    <fullName>Presenting_Issues__c</fullName>
    <label>Presenting Issues</label>
    <type>TextArea</type>
</CustomField>