DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Primary_Reason_For_Seeking_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_For_Seeking_Assistance__c</fullName>
    <label>Primary Reason For Seeking Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexReasonForAssistance</valueSetName>
    </valueSet>
</CustomField>