DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>Case__r.Program_Name__c</formula>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>