DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Reason_for_Disengaging__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disengaging__c</fullName>
    <description>CF - Reason a participant has disengaged with a service</description>
    <inlineHelpText>CF - Reason a participant has disengaged with a service</inlineHelpText>
    <label>Reason for Disengaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer Required Services</fullName>
            </value>
            <value>
                <fullName>Dissatisfied with Services Received</fullName>
            </value>
            <value>
                <fullName>Only Required Short-Term Services</fullName>
            </value>
            <value>
                <fullName>Difficulty Accessing Service on an Ongoing Basis</fullName>
            </value>
            <value>
                <fullName>Able to Access Supports External to the Aged Care System</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unable to Determine Primary Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>