DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Acceptance_Date__c</fullName>
    <inlineHelpText>Date when the Participant or Family engaged with the Referred Organisation</inlineHelpText>
    <label>Referral Acceptance Date</label>
    <type>Date</type>
</CustomField>