DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Records the date the Outbound Referral was made, not the date it was recorded</description>
    <inlineHelpText>Enter the date that the Outbound Referral was made, not the date created</inlineHelpText>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>