DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Referral_Purpose__c</fullName>
    <label>Referral Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>