DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Status__c</fullName>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Chose not to progress</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
                <isActive>false</isActive>
                <label>Acknowledged</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>