DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referred_Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Referred_Organisation_Type__c</fullName>
    <formula>TEXT(Referred_To_Organisation__r.Org_Type__c)</formula>
    <label>Referred Organisation Type</label>
    <type>Text</type>
</CustomField>