DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referred_To_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Referred_To_Organisation__c</fullName>
    <label>Referred To Organisation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Households cannot be selected</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency, Organization, Clinic, Education Setting, Employer, Community Group, Health, Service Provider, Government Department, Peak Body</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals To This Organisation</relationshipLabel>
    <relationshipName>Outbound_Referrals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>