DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Referring_Worker__c.field-meta.xml
<CustomField>
    <fullName>Referring_Worker__c</fullName>
    <formula>CreatedBy.FullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Worker</label>
    <type>Text</type>
</CustomField>