DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Service_Type_Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Referred_To__c</fullName>
    <description>RCC - Service the Client was Referred for</description>
    <inlineHelpText>Service the Client was Referred for</inlineHelpText>
    <label>Service Type Referred To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A - no referral made</fullName>
            </value>
            <value>
                <fullName>Adventure Therapy</fullName>
            </value>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>Builders</fullName>
            </value>
            <value>
                <fullName>Centrelink</fullName>
            </value>
            <value>
                <fullName>Child Protection Helpline</fullName>
            </value>
            <value>
                <fullName>Community Transport</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Disability Counselling</fullName>
            </value>
            <value>
                <fullName>Domestic Violence Support</fullName>
            </value>
            <value>
                <fullName>Drug and alcohol</fullName>
            </value>
            <value>
                <fullName>Early childhood education</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Environmental Access</fullName>
            </value>
            <value>
                <fullName>Financial Counselling</fullName>
            </value>
            <value>
                <fullName>Food Relief</fullName>
            </value>
            <value>
                <fullName>Gambling counselling</fullName>
            </value>
            <value>
                <fullName>Geotechnical Assessment</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Indigenous Counselling</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>In-Kind Support</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Material Aid</fullName>
            </value>
            <value>
                <fullName>Mental health</fullName>
            </value>
            <value>
                <fullName>Other counselling</fullName>
            </value>
            <value>
                <fullName>Parent/family support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>