DevOps/force-app/main/default/objects/Outbound_Referral__c/fields/Sharing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Criteria__c</fullName>
    <label>Sharing Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>