DevOps/force-app/main/default/objects/Outbound_Referral__c/recordTypes/LAC_Referral.recordType-meta.xml
<RecordType>
    <fullName>LAC_Referral</fullName>
    <active>true</active>
    <label>LAC Referral</label>
</RecordType>