DevOps/force-app/main/default/objects/Outbound_Referral__c/validationRules/FCiS_Referral_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>FCiS_Referral_Type</fullName>
    <active>true</active>
    <errorConditionFormula>Program_Name__c = &quot;Family Connect in Schools&quot; &amp;&amp;
ISPICKVAL(Service_Type_Referred_To__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Service_Type_Referred_To__c</errorDisplayField>
    <errorMessage>Family Connect in Schools cases must enter a Service Type Referred To when completing an Outbound Referral.</errorMessage>
</ValidationRule>