DevOps/force-app/main/default/objects/Outbound_Referral__c/validationRules/Referral_Acceptance_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Acceptance_Date</fullName>
    <active>true</active>
    <description>Checks to make sure once a worker has recorded that an Outbound Referral has been accepted, that a Referral Acceptance Date has been recorded</description>
    <errorConditionFormula>ISPICKVAL(Referral_Status__c, &quot;Accepted&quot;) &amp;&amp;  ISBLANK( Referral_Acceptance_Date__c )</errorConditionFormula>
    <errorMessage>Referral Acceptance Date must be recorded when an Outbound Referral status is changed to Accepted</errorMessage>
</ValidationRule>