DevOps/force-app/main/default/objects/Outbound_Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Referred_To_Organisation__c</columns>
    <columns>Referral_Date__c</columns>
    <columns>Referring_Worker__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <label>All</label>
</ListView>