DevOps/force-app/main/default/objects/Outbound_Referral__c/listViews/All_Recovery_Connect_Outbound_Referrals.listView-meta.xml
<ListView>
    <fullName>All_Recovery_Connect_Outbound_Referrals</fullName>
    <columns>NAME</columns>
    <columns>Program_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Referred_To_Organisation__c</columns>
    <columns>Referral_Date__c</columns>
    <columns>Referring_Worker__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Name__c</field>
        <operation>equals</operation>
        <value>Recovery Connect</value>
    </filters>
    <label>All Recovery Connect Outbound Referrals</label>
</ListView>